Have everything working except for other user's profiles

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.codepath.apps.simpletwitter.TimelineActivity" />
         </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile"
+            android:parentActivityName=".TimelineActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.codepath.apps.simpletwitter.TimelineActivity" />
+        </activity>
     </application>
 
 </manifest>
